Fix horizontal line on overflow

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -35,6 +35,8 @@ img{
     color: #24292e;
     background-color: #f6f8fa;
     border-radius: 6px;
+    overflow-x: auto;
+
 }
 
 code{
@@ -64,7 +66,7 @@ code{
 table {
   border-collapse: collapse;
   margin: 0 auto;
- 
+
 }
 
 table, th, td {
